--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,23 +1,32 @@
-name: Generate Snake Animation
+name: Generate GitHub Contribution Snake Animation
 
 on:
   push:
     branches:
-      - main  # Trigger the action on pushes to the main branch
+      - main  # Runs on pushes to the main branch
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@v3
+      # Step 1: Check out the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      # Step 2: Generate the Snake Animation
+      - name: Generate Snake
+        uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-      - name: Upload Snake to Repository
+
+      # Step 3: Push the Snake Files Back to the Repository
+      - name: Push Snake Files to Repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           mkdir -p output
           cp dist/* output/
@@ -25,4 +34,4 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add output/
           git commit -m "Generated Snake Animation"
-          git push
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
